--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,8 @@
 
 	<link rel='stylesheet' href='global.css'>
 	<link rel='manifest' href='manifest.json'>
-	<link rel='icon' type='image/png' href='favicon.png'>
+  <link rel='icon' type='image/png' href='favicon.png'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
